fix(item) align

--- a/src/app/buy/item/item.component.scss
+++ b/src/app/buy/item/item.component.scss
@@ -27,7 +27,7 @@
 }
 
 .prev-items {
-  margin: 0 2.6vw 0 3vw;
+  margin: 0 2.8vw 0 2.8vw;
 }
 
 b {
